--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
 spring.application.name=gestion-notas
+
+# Base de datos
+spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:5432/notasdb}
+spring.datasource.username=${DB_USERNAME:notas_user}
+spring.datasource.password=${DB_PASSWORD:StrongPass123!}
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# JPA y Hibernate
+spring.jpa.hibernate.ddl-auto=${DDL_STRATEGY:update}
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# Servidor
+server.port=${PORT:8080}
+server.error.include-stacktrace=never
